# mermaid-visual-editor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.planning/: DECISIONS.md  IDEAS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-error-recovery-templates/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-diagram-editor-improvements/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: architecture.md  component-graph.mmd  dev-guide.md  sync-loop.mmd  toolchain-decision.md
examples/: flowchart.mmd  gantt.mmd  pie.mmd  sequence.mmd
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/client/: App.tsx  index.css
src/client/hooks/: useExport.ts  useFileWatching.ts  useKeyboardShortcuts.ts  usePaneVisibility.ts  useTabManager.ts
src/client/lib/: api.ts  buffer.ts  fileOps.ts  templates.ts  (+1 more)
src/lib/: fileOps.ts  layout.ts
src/server/: Cargo.toml
src/server/src/: export.rs  files.rs  lib.rs  main.rs  routes.rs  state.rs  watch.rs
src/server/tests/: integration.rs
(+56 files in other folders)
