[package]
name = "mermaid-visual-editor-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "mermaid_visual_editor_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["compression"] }
notify = "7"
notify-debouncer-mini = "0.5"
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
urlencoding = "2"
